# sunless-stats

./: ACKNOWLEDGEMENTS.md  Cargo.toml  LICENSE  README.md
css/: styles.css
data/: LEGAL_NOTICE.md  equipment.ron  officers.ron  ships.ron
src/: data.rs  item.rs  lib.rs  main.rs
src/equipment/: mod.rs
src/gui/: mod.rs  modal.rs  stats.rs
src/gui/ship_config/: equipment.rs  mod.rs  officers.rs  selector.rs
src/item/: item_set.rs  mod.rs  slot.rs
src/officers/: mod.rs
src/ship/: mod.rs  shiptype.rs  statistics.rs
