[package]
name = "sunless-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.7"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
dioxus = { version = "0.2.3", features = ["desktop", "fermi"] }